Add FoodItems links in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -59,6 +59,27 @@
 
 					<li class="nav-dropdown">
 						<a class="has-arrow" href="#" aria-expanded="true">
+							<i class="icon dripicons-cutlery"></i>
+							<span>Food Items</span>
+						</a>
+
+						<ul class="collapse nav-sub" aria-expanded="false">
+							<li>
+								<%= link_to "Add Food Item", nil, class: "linkto-text" %>
+							</li>
+
+							<li>
+								<%= link_to "Available Food Items", nil, class: "linkto-text" %>
+							</li>
+
+							<li>
+								<%= link_to "Discarded Food Items", nil, class: "linkto-text" %>
+							</li>
+						</ul>
+					</li>
+
+					<li class="nav-dropdown">
+						<a class="has-arrow" href="#" aria-expanded="true">
 							<i class="icon dripicons-tags"></i>
 							<span>Discounts</span>
 						</a>
