--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -69,7 +69,7 @@
 							</li>
 
 							<li>
-								<%= link_to "Available Food Items", nil, class: "linkto-text" %>
+								<%= link_to "Available Food Items", food_items_path, class: "linkto-text" %>
 							</li>
 
 							<li>
