--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -1,2 +1,39 @@
-<h1>FoodItems#index</h1>
-<p>Find me in app/views/food_items/index.html.erb</p>
+<div class="container mt-5">
+  <div class="d-flex">
+    <h1 class="mt-5 mx-4">Available Food Items</h1>
+  </div>
+
+  <div class="card-body">
+    <table class="table table-hover table-bordered">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">Sr #</th>
+          <th scope="col">Name</th>
+          <th scope="col">Category</th>
+          <th scope="col">Discount</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @food_items.each_with_index do |fooditem, index| %>
+          <tr>
+            <td scope="row"><%= index + 1 %></td>
+            <td class="text-capitalize"><%= fooditem.name %></td>
+            <td class="text-capitalize"><%= fooditem.item_group.name %></td>
+            <% if fooditem.discount %>
+              <td class="text-capitalize"><%= fooditem.discount.name %></td>
+            <% else %>
+              <td class="text-capitalize">None</td>
+            <% end %>
+            <td class="actionfield-width">
+              <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
+              <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
+              <%= link_to "Discard", nil, method: :delete, data: {confirm: "Are you sure !! You want to discard this food item?"}, class: "badge badge-danger text-white" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
