--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -73,7 +73,7 @@
 							</li>
 
 							<li>
-								<%= link_to "Discarded Food Items", nil, class: "linkto-text" %>
+								<%= link_to "Discarded Food Items", discarded_food_items_path, class: "linkto-text" %>
 							</li>
 						</ul>
 					</li>
