--- a/app/views/food_items/discarded.html.erb
+++ b/app/views/food_items/discarded.html.erb
@@ -34,7 +34,7 @@
               </td>
 
               <td class="actionfield-width">
-                <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
+                <%= link_to "Show", food_item_path(dfi), class: "badge badge-primary text-white" %>
                 <%= link_to "Restore", nil, method: :get, class: "badge badge-success text-white" %>
                 <%= link_to "Delete", nil, method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this food item?"}, class: "badge badge-danger text-white" %>
               </td>
