--- a/app/views/food_items/show.html.erb
+++ b/app/views/food_items/show.html.erb
@@ -13,7 +13,7 @@
           <%= link_to "Delete", food_item_path(@food_item), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this discount?"}, class: "badge badge-danger text-white" %>
         <% else %>
           <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
-          <%= link_to "Discard", nil, method: :delete, data: {confirm: "Are you sure !! You want to discard this discount?"}, class: "badge badge-danger text-white" %>
+          <%= link_to "Discard", food_item_path(@food_item), method: :delete, data: {confirm: "Are you sure !! You want to discard this food item?"}, class: "badge badge-danger text-white" %>
         <% end %>
       </div>
     </div>
