Add path to AddFoodItem link in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -65,7 +65,7 @@
 
 						<ul class="collapse nav-sub" aria-expanded="false">
 							<li>
-								<%= link_to "Add Food Item", nil, class: "linkto-text" %>
+								<%= link_to "Add Food Item", new_food_item_path, class: "linkto-text" %>
 							</li>
 
 							<li>
