--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -7,7 +7,7 @@
         <div class="card-body">
           <div class="form-group">
             <%= f.label :name, "Name" %>
-            <%= f.text_field :name, :placeholder => "Enter discount name", :class => "form-control" %>
+            <%= f.text_field :name, placeholder: "Enter discount name", class: "form-control" %>
           </div>
 
           <div class="form-group">
