--- a/app/views/item_groups/_form.html.erb
+++ b/app/views/item_groups/_form.html.erb
@@ -7,7 +7,7 @@
         <div class="card-body">
           <div class="form-group">
             <%= f.label :name, "Category name" %>
-            <%= f.text_field :name, :placeholder => "Enter category name", :class => "form-control" %>
+            <%= f.text_field :name, placeholder: "Enter category name", class: "form-control" %>
           </div>
 
           <div class="form-group row">
@@ -34,7 +34,7 @@
 
             <div class="card-footer bg-light link">
               <%= link_to_add_association "New option", f, :options, class: "btn btn-success text-white" %>
-              <%= f.button "Submit", type: "submit", :class=> "btn btn-dark" %>
+              <%= f.button "Submit", type: "submit", class: "btn btn-dark" %>
             </div>
           </div>
         </div>
