--- a/app/views/item_groups/new.html.erb
+++ b/app/views/item_groups/new.html.erb
@@ -5,7 +5,7 @@
     <div class="card-body">
       <ul class="nav nav-pills nav-pills-primary mb-3" id="pills-demo-1" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" id="pills-1-tab" data-toggle="pill" href="#pills-1" role="tab" aria-controls="pills-1" aria-selected="true">Category</a>
+          <a class="nav-link" id="pills-1-tab" data-toggle="pill" href="#pills-1" role="tab" aria-controls="pills-1" aria-selected="true">Details</a>
         </li>
 
         <li class="nav-item">
