Add id to category selection field of form partial of FoodItems views

--- a/app/views/food_items/_form.html.erb
+++ b/app/views/food_items/_form.html.erb
@@ -15,7 +15,7 @@
               <%= f.label :item_group, "Category" %>
 
               <div>
-                <%= f.collection_select :item_group, ItemGroup.order(:name), :id, :name, {prompt: "Select category"}, class: "form-control border-secondary text-dark" %>
+                <%= f.collection_select :item_group, ItemGroup.order(:name), :id, :name, {prompt: "Select category"}, class: "form-control border-secondary text-dark", id: "categories_field" %>
               </div>
             </div>
 
