--- a/app/assets/stylesheets/food_items.scss
+++ b/app/assets/stylesheets/food_items.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the FoodItems controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.selectionfield-width
+{
+  width: 77.5%;
+}
