--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -7,20 +7,22 @@
         <div class="card-body">
           <div class="form-group">
             <%= f.label :name, "Name" %>
-            <%= f.text_field :name, placeholder: "Enter discount name", class: "form-control" %>
+            <%= f.text_field :name, placeholder: "Enter discount name", class: "form-control border-secondary" %>
           </div>
 
-          <div class="form-group">
-            <%= f.label :kind, "Type" %>
+          <div class="row">
+            <div class="form-group col">
+              <%= f.label :kind, "Type" %>
 
-            <div>
-              <%= f.select :kind, Discount.kinds.keys, class: "form-control" %>
+              <div class="selectionfield-width">
+                <%= f.collection_select :kind, Discount.kinds.keys, :to_s, :titleize, {prompt: "Select discount type"}, class: "form-control border-secondary text-dark" %>
+              </div>
             </div>
           </div>
 
           <div class="form-group">
             <%= f.label :value, "Discount" %>
-            <%= f.number_field :value, class: "form-control" %>
+            <%= f.number_field :value, class: "form-control border-secondary" %>
           </div>
 
           <div class="form-group row">
