--- a/app/views/discounts/_discount_timeline_fields.html.erb
+++ b/app/views/discounts/_discount_timeline_fields.html.erb
@@ -3,13 +3,13 @@
     <%= f.label :start_date, "From", class: "col col-form-label" %>
 
     <div class="col-sm-10">
-      <%= f.date_field :start_date, class: "form-control" %>
+      <%= f.date_field :start_date, class: "form-control border-secondary" %>
     </div>
 
     <%= f.label :end_date, "To", class: "col col-form-label" %>
 
     <div class="col-sm-10">
-      <%= f.date_field :end_date, class: "form-control" %>
+      <%= f.date_field :end_date, class: "form-control border-secondary" %>
     </div>
 
     <div class="mt-3 ml-3">
