--- a/app/views/item_groups/_form.html.erb
+++ b/app/views/item_groups/_form.html.erb
@@ -7,7 +7,7 @@
         <div class="card-body">
           <div class="form-group">
             <%= f.label :name, "Category name" %>
-            <%= f.text_field :name, placeholder: "Enter category name", class: "form-control" %>
+            <%= f.text_field :name, placeholder: "Enter category name", class: "form-control border-secondary" %>
           </div>
 
           <div class="form-group row">
