--- a/app/views/item_groups/_option_fields.html.erb
+++ b/app/views/item_groups/_option_fields.html.erb
@@ -3,7 +3,7 @@
     <%= f.label :name, "Option name", class: "col col-form-label" %>
 
     <div class="col-sm-10">
-      <%= f.text_field :name, :placeholder => "Enter option name", :class => "form-control" %>
+      <%= f.text_field :name, placeholder: "Enter option name", class: "form-control border-secondary" %>
     </div>
 
     <%= f.label :availability, class: "col col-form-label mt-2" %>
