--- a/app/views/food_items/_form.html.erb
+++ b/app/views/food_items/_form.html.erb
@@ -36,9 +36,10 @@
         <h5 class="card-header text-capitalize">Set Price</h5>
 
         <div class="card-body">
-          <div class="form-group" id="timelines">
-            <div id="options_result"></div>
-
+          <div class="form-group">
+            <div id="nested_fields" class="nested-fields">
+              <div id="options_result"></div>
+            </div>
             <div class="card-footer bg-light link">
               <%= f.button "Submit", type: "submit", class: "btn btn-dark" %>
             </div>
