--- a/app/views/food_items/show.html.erb
+++ b/app/views/food_items/show.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "Restore", restore_food_item_path(@food_item), method: :get, class: "badge badge-success text-white" %>
           <%= link_to "Delete", food_item_path(@food_item), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this discount?"}, class: "badge badge-danger text-white" %>
         <% else %>
-          <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
+          <%= link_to "Edit", edit_food_item_path(@food_item), class: "badge badge-warning text-white" %>
           <%= link_to "Discard", food_item_path(@food_item), method: :delete, data: {confirm: "Are you sure !! You want to discard this food item?"}, class: "badge badge-danger text-white" %>
         <% end %>
       </div>
