--- a/app/views/food_items/_form.html.erb
+++ b/app/views/food_items/_form.html.erb
@@ -15,7 +15,7 @@
               <%= f.label :item_group_id, "Category" %>
 
               <div>
-                <%= f.collection_select :item_group_id, ItemGroup.order(:name), :id, :name, {prompt: "Select category"}, class: "form-control border-secondary text-dark", id: "categories_field" %>
+                <%= f.collection_select :item_group_id, ItemGroup.order(:name), :id, :name, {prompt: "Select category"}, class: "form-control border-secondary text-dark", id: "categories_field", disabled: (params[:action] == 'edit') %>
               </div>
             </div>
 
