--- a/app/views/food_items/_form.html.erb
+++ b/app/views/food_items/_form.html.erb
@@ -38,8 +38,15 @@
         <div class="card-body">
           <div class="form-group">
             <div id="nested_fields" class="nested-fields">
-              <div id="options_result"></div>
+              <div id="options_result">
+                <% if f.object.options.present? %>
+                  <%= f.fields_for :food_item_options do |option|%>
+                    <%= render 'edit_category_options', f: option %>
+                  <% end %>
+                <% end %>
+              </div>
             </div>
+
             <div class="card-footer bg-light link">
               <%= f.button "Submit", type: "submit", class: "btn btn-dark" %>
             </div>
