--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -6,13 +6,13 @@
 		<% if current_employee %>
 			<li class="nav-item dropdown">
 				<a class="nav-link nav-pill user-avatar" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-					<img src="../assets/img/avatars/1.jpg" class="w-35 rounded-circle" alt="Albert Einstein">
+					<%= image_tag 'img/avatars/1', class: "w-35 rounded-circle" %>
 				</a>
 
 				<div class="dropdown-menu dropdown-menu-right dropdown-menu-accout">
 					<div class="dropdown-header pb-3">
 						<div class="media d-user">
-							<img class="align-self-center mr-3 w-40 rounded-circle" src="../assets/img/avatars/1.jpg" alt="Albert Einstein">
+							<%= image_tag 'img/avatars/1', class: "w-35 rounded-circle mr-2" %>
 
 							<div class="media-body">
 								<h5 class="mt-0 mb-0"><%= current_employee.employee_fullname %></h5>
