--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -4,7 +4,7 @@
 			<ul class="site-logo">
 				<li>
 					<!-- START LOGO -->
-					<a href="index.html">
+					<a href="/">
 						<div class="logo">
 							<svg id="logo" width="35" height="35" viewBox="0 0 54.03 56.55">
 								<defs>
