Add image field in edit.html.erb/invitations/devise views

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -21,6 +21,11 @@
         <%= f.text_field :phone %>
       </div>
 
+      <div class="field mb-1">
+        <%= f.label :profile_pic %><br />
+        <%= f.file_field :profile_pic %>
+      </div>
+
       <div class="field">
         <%= f.label :password %><br />
         <%= f.password_field :password %>
