--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -6,7 +6,7 @@
 		<% if current_employee %>
 			<li class="nav-item dropdown">
 				<a class="nav-link nav-pill user-avatar" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-					<%= image_tag 'img/avatars/1', class: "w-35 rounded-circle" %>
+					<%= image_tag current_employee.profile_pic, class: "w-35 rounded-circle" %>
 				</a>
 
 				<div class="dropdown-menu dropdown-menu-right dropdown-menu-accout">
