--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -21,9 +21,9 @@
 						</div>
 					</div>
 
-					<a class="dropdown-item" href="pages.profile.html">
+					<%= link_to employees_profile_show_path, class: "dropdown-item" do %>
 						<i class="icon dripicons-user"></i> Profile
-					</a>
+					<% end %>
 
 					<a class="dropdown-item" href="pages.my-account.html">
 						<i class="icon dripicons-gear"></i> Account Settings
