Add edit button path in show view of profile/employees views

--- a/app/views/employees/profile/show.html.erb
+++ b/app/views/employees/profile/show.html.erb
@@ -31,7 +31,7 @@
         <div class="card-body">
           <div class="tab-content">
             <h3 class="d-inline card-title">Profile details</h3>
-            <%= link_to "Edit", nil, class: "float-right badge badge-warning text-white" %><hr>
+            <%= link_to "Edit", edit_employee_registration_path, class: "float-right badge badge-warning text-white" %><hr>
 
             <ul class="list-reset p-t-10">
               <li class="p-b-10 text-capitalize">
