--- a/app/views/employees/profile/show.html.erb
+++ b/app/views/employees/profile/show.html.erb
@@ -7,23 +7,18 @@
     <div class="col-xl-3 col-lg-4">
       <div class="card">
         <div class="card-body">
-          <div class="tab-content profile-card text-center">
+          <div class="tab-content profile-card text-center mb-1">
             <div class="thumb-xl member-thumb m-b-10 center-block">
               <% if @employee.profile_pic.persisted? %>
-                <%= image_tag @employee.profile_pic, class: "rounded-circle", alt: "profile-pic" %>
+                <%= image_tag @employee.profile_pic, class: "w-160 h-150 rounded-circle mb-1", alt: "profile pic" %>
               <% else %>
                 <%= image_tag 'img/avatars/no-profile', class: "rounded-circle", alt: "profile-avatar" %>
               <% end %>
             </div><hr>
 
             <div>
-              <h5 class="m-b-5"><%= @employee.employee_fullname %></h5>
+              <h5 class="m-b-5 text-capitalize"><%= @employee.employee_fullname %></h5>
               <p class="text-muted text-lowercase">@<%= @employee.first_name + @employee.last_name %></p>
-            </div>
-
-            <div class="file-upload">
-              <label for="upload" class="btn-sm btn-primary">Upload a new picture</label>
-              <input id="upload" class="file-upload__input" type="file" name="file-upload">
             </div>
           </div>
         </div>
