--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -81,3 +81,16 @@
     </div>
   </div>
 </div>
+
+<script>
+  function previewImage(event) {
+    const reader = new FileReader();
+    const imageField = document.getElementById('image-field');
+    reader.onload = function () {
+      if (reader.readyState == 2) {
+        imageField.src = reader.result;
+      }
+    }
+    reader.readAsDataURL(event.target.files[0]);
+  }
+</script>
