--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -31,13 +31,12 @@
 						</div>
 					</div>
 
+					<div class="dropdown-divider"></div>
+
 					<%= link_to employees_profile_show_path, class: "dropdown-item" do %>
 						<i class="icon dripicons-user"></i> Profile
 					<% end %>
 
-					<a class="dropdown-item" href="pages.my-account.html">
-						<i class="icon dripicons-gear"></i> Account Settings
-					</a>
 					<div class="dropdown-divider"></div>
 
 					<%= link_to destroy_employee_session_path, class: "dropdown-item", method: :delete do %>
