Add menus related links in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -38,6 +38,27 @@
 
 					<li class="nav-dropdown">
 						<a class="has-arrow" href="#" aria-expanded="true">
+							<i class="icon dripicons-menu"></i>
+							<span>Menus</span>
+						</a>
+
+						<ul class="collapse nav-sub" aria-expanded="false">
+							<li>
+								<%= link_to "Add Menu", nil, class: "linkto-text" %>
+							</li>
+
+							<li>
+								<%= link_to "Available Menus", nil, class: "linkto-text" %>
+							</li>
+
+							<li>
+								<%= link_to "Discarded Menus", nil, class: "linkto-text" %>
+							</li>
+						</ul>
+					</li>
+
+					<li class="nav-dropdown">
+						<a class="has-arrow" href="#" aria-expanded="true">
 							<i class="icon dripicons-folder-open"></i>
 							<span>Categories</span>
 						</a>
