--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -48,7 +48,7 @@
 							</li>
 
 							<li>
-								<%= link_to "Available Menus", nil, class: "linkto-text" %>
+								<%= link_to "Available Menus", menus_path, class: "linkto-text" %>
 							</li>
 
 							<li>
