--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -38,7 +38,7 @@
 
 					<li class="nav-dropdown">
 						<a class="has-arrow" href="#" aria-expanded="true">
-							<i class="icon dripicons-menu"></i>
+							<i class="icon dripicons-document"></i>
 							<span>Menus</span>
 						</a>
 
