Add condition to handle empty menus in index view of Menu views

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -4,37 +4,41 @@
   </div>
 
   <div class="card-body">
-    <table class="table table-hover table-bordered">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">Sr #</th>
-          <th scope="col">Title</th>
-          <th scope="col">Availability</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @menus.each_with_index do |menu, index| %>
+    <% if @menus.empty? %>
+      <h3 class="border ml-1">No available menus</h3>
+    <% else %>
+      <table class="table table-hover table-bordered">
+        <thead class="thead-light">
           <tr>
-            <td scope="row"><%= index + 1 %></td>
-            <td class="text-capitalize"><%= menu.title %></td>
-
-            <% if menu.availability %>
-              <td class="text-capitalize">Available</td>
-            <% else %>
-              <td class="text-capitalize">Unavailable</td>
-            <% end %>
-
-            <td class="actionfield-width">
-              <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
-              <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
-              <%= link_to "Discard", menu_path(menu), method: :delete, data: {confirm: "Are you sure !! You want to discard this menu?"}, class: "badge badge-danger text-white" %>
-            </td>
+            <th scope="col">Sr #</th>
+            <th scope="col">Title</th>
+            <th scope="col">Availability</th>
+            <th scope="col">Actions</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+
+        <tbody>
+          <% @menus.each_with_index do |menu, index| %>
+            <tr>
+              <td scope="row"><%= index + 1 %></td>
+              <td class="text-capitalize"><%= menu.title %></td>
+
+              <% if menu.availability %>
+                <td class="text-capitalize">Available</td>
+              <% else %>
+                <td class="text-capitalize">Unavailable</td>
+              <% end %>
+
+              <td class="actionfield-width">
+                <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
+                <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
+                <%= link_to "Discard", menu_path(menu), method: :delete, data: {confirm: "Are you sure !! You want to discard this menu?"}, class: "badge badge-danger text-white" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 </div>
 
