--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="card-body">
     <% if @menus.empty? %>
-      <h3 class="border ml-1">No available menus</h3>
+      <h3 class="border ml-1">No menu available</h3>
     <% else %>
       <table class="table table-hover table-bordered">
         <thead class="thead-light">
